force-app/main/default/objects/SVMXA360__COMM_Recentitem__c/SVMXA360__COMM_Recentitem__c.object-meta.xml
<CustomObject>
    <description>Object stores recently viewed items in setup home page</description>
    <label>Recent Items</label>
    <nameField>
        <displayFormat>RI-{000000}</displayFormat>
        <label>Recent Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recent Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>