force-app/main/default/objects/SVMXA360__COMM_Recentitem__c/fields/SVMXA360__AdminConfigurationName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AdminConfigurationName__c</fullName>
    <description>Field stores the configuration item name viewed by user</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Admin Configuration Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>