force-app/main/default/objects/SVMXA360__COMM_Recentitem__c/fields/SVMXA360__ConfigurationDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ConfigurationDeveloperName__c</fullName>
    <description>Field stores configuration item developer name viewed by user</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Configuration Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>