force-app/main/default/objects/SVMXA360__COMM_Recentitem__c/fields/SVMXA360__ConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ConfigurationId__c</fullName>
    <description>Field stores id of configuration item viewed by user</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Configuration Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>