force-app/main/default/objects/SVMXA360__COMM_Recentitem__c/fields/SVMXA360__ConfigurationType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ConfigurationType__c</fullName>
    <description>Field stores configuration type viewed by user</description>
    <label>Configuration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Expression</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>