force-app/main/default/objects/SVMXA360__COMM_Recentitem__c/fields/SVMXA360__ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ObjectAPIName__c</fullName>
    <description>Stores the object api name belongs to admin configuration item</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Object API Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>